--- a/public/assets/css/includes/card.css
+++ b/public/assets/css/includes/card.css
@@ -56,3 +56,14 @@
     background: linear-gradient(45deg, #0056b3, #003a82);
     transform: scale(1.05);
 }
+
+.card-hover {
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transition: box-shadow 0.3s ease;
+}
+
+.card-hover:hover {
+    /* transform: translateY(-5px); */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
